--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "main": "index.js",
   "scripts": {
     "start": "node index",
-    "dev": "nodemon --inspect-brk index"
+    "dev": "nodemon --inspect-brk index",
+    "dev:debug": "DEBUG=true npm run dev",
+    "start:debug": "DEBUG=true npm start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "csv-parse": "^3.1.3",
+    "csv-parse": "^4.8.5",
     "highland": "^2.13.0",
     "html-pdf": "^2.2.0",
     "moment": "^2.22.2",
     "nodemailer": "^4.6.8",
-    "ramda": "^0.25.0"
+    "ramda": "^0.27.0"
   },
   "devDependencies": {
     "dotenv": "^6.1.0",
